# tgc2org

./: .gitignore  CHANGELOG.md  tgc2org.cabal
app/: Main.hs
src/: Lib.hs
src/Lib/: Telegram.hs  Types.hs
test/: Suite.hs
test/fixtures/: simple.json
