cabal-version:       2.4
name:                tgc2org
version:             0.1.0.0
synopsis:            Telegram channel to Org mode document converter
homepage:            https://github.com/astynax/tgc2org
license:             BSD-3-Clause
license-file:        LICENSE
author:              Aleksei Pirogov
maintainer:          astynax@users.noreply.github.com
copyright:           Aleksei Pirogov, 2021
category:            Text
extra-source-files:  CHANGELOG.md

common basis
  default-language:    Haskell2010
  build-depends:       base ^>=4.13.0.0
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wmissing-exported-signatures

library
  import:              basis
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Telegram
  build-depends:       aeson
                     , deriving-aeson
                     , org-mode
                     , bytestring
                     , path
                     , path-io
                     , text
                     , time
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wmissing-exported-signatures

executable tgc2org
  import:              basis
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       tgc2org
                     , path

test-suite tgc2org-test
  import:              basis
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Suite.hs
  build-depends:       tgc2org
                     , HUnit
                     , aeson
                     , bytestring
                     , path
                     , time
